# neuroneek

./: .devcontainer.json  .envrc  .gitattributes  .gitignore  .justfile  .prototools  .tbls.yml  CODE_OF_CONDUCT  CONTRIBUTING.md  Cargo.toml  Dockerfile  Earthfile  LICENSE  README.md  SPEC.md  TASK.md  __TASK__  architecture.d2  cargo.toml  dagger.json  db.sqlite  devbox.json  devenv.nix  devenv.yaml  dist-workspace.toml  ellipsis.Dockerfile  ellipsis.yaml  example.env  flake.nix  justfile  launch.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  psychonautwiki.json  pyproject.toml  qodana.yaml  railway.json  release.toml  rust-toolchain.toml  (+3 more)
.archive/: .gitattributes  .gitignore  .justfile  DEVELOPMENT.md  README.md  example.env  nixpacks.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  qodana.yaml
apps/cli/: .clippy.toml  .gitattributes  .gitignore  Cargo.toml  DEVELOPER_LOG  DEVELOPMENT.md  Makefile  README.md  TODO.txt  db.sqlite
apps/cli/docs/.release/: INSTALL-LINUX.txt
apps/cli/migration/src/: m20220101_000001_init_db.rs
apps/cli/public/: neuronek-2024-05-30.json
apps/cli/src/: db.rs  ingestion.rs  ingestion_analyzer.rs  ingestion_intelligence.rs  main.rs  orm.rs  persistance.rs  substance.rs
apps/cli/src/cli/: bin.rs  main.rs  mod.rs
apps/cli/src/cli/dashboard/: mod.rs
apps/cli/src/cli/import/: import_from_psychonautwiki_journal.ts.rs
apps/cli/src/cli/ingestion/: create.rs  create_ingestion.rs  delete_ingestion.rs  mod.rs  plan_ingestion.rs
apps/cli/src/cli/substance/: list_substances.rs  mod.rs
apps/cli/src/core/: dosage.rs  ingestion.rs  ingestion_analysis.rs  mass.rs  mass_range.rs  mod.rs  phase.rs  route_of_administration.rs  route_of_administration_dosage.rs  route_of_administration_phase.rs  stash.rs  substance.rs
apps/cli/src/db/: account.rs  dosage.rs  effect.rs  ingestion.rs  mod.rs  phase.rs  prelude.rs  psychoactive_class.rs  route_of_administration.rs  route_of_administration_dosage.rs  route_of_administration_phase.rs  stash.rs  subject.rs  substance.rs  substance_interaction.rs  substance_route_of_administration.rs  substance_synonym.rs  substance_tolerance.rs
apps/cli/src/entities/: dosage.rs  ingestion.rs  mod.rs  phase.rs  prelude.rs  route_of_administration.rs  substance.rs
apps/cli/src/internal/: mod.rs
apps/cli/src/migrator/: Cargo.toml  README.md  dev.db  m20220101_000001_init_db.rs  mod.rs
apps/cli/src/migrator/src/: lib.rs  m20220101_000001_init_db.rs  m20240530_215436_add_ingestion_route_of_administration.rs  m20240606_043946_baseline_checkpoint.rs
apps/cli/src/migrator/src/migrations/: rebase.sql
apps/cli/src/service/: dosage.rs  ingestion.rs  mod.rs  phase.rs  roa.rs  scrapper.rs  substance.rs
apps/data-processing/: .pdm-python  Cargo.toml  pyproject.toml
apps/data-processing/graphql_client/: __init__.py  all_substances.py  enums.py
apps/etl/: .gitignore  README.md  pyproject.toml
apps/etl/prisma/: schema.prisma
apps/etl/src/: nids.py  workflow.py
apps/etl/src/custom_types/: effectindex.py
apps/etl/src/graphql_client/: client.py  get_substances.py
apps/etl/src/neuronek/: __init__.py
db/rust-diesel-client/: Cargo.toml  diesel.toml
db/rust-diesel-client/.cargo/: config.toml
db/rust-diesel-client/migrations/2024-06-20-131853_init/: up.sql
db/rust-diesel-client/src/: mod.rs  schema.rs
db/rust-seaorm-client/: Cargo.toml  Makefile  README.md
db/rust-seaorm-client/migrations/: 20240607182528.sql  20240609081943.sql
db/rust-seaorm-client/public/: 20240607043921_init.sql  20240609081943.sql
db/rust-seaorm-client/src/: account.rs  chemical_class.rs  effect.rs  ingestion.rs  lib.rs  main.rs  mod.rs  prelude.rs  psychoactive_class.rs  query_root.rs  stash.rs  subject.rs  substance.rs  substance_interactions.rs  substance_route_of_administration.rs  substance_route_of_administration_dosage.rs  substance_route_of_administration_phase.rs  substance_synonym.rs  substance_tolerance.rs
db/rust-seaorm-client/src/migrations/: m20220101_000001_init.rs  m20240607_000002.rs  m20240609_000003.rs  mod.rs  raw_migrations.rs
dirty_files/source/containers/cli-v2/: Cargo.toml  Earthfile  Justfile  devenv.nix
dirty_files/source/containers/cli-v2/docs/: ingestion-logging.md
dirty_files/source/containers/cli-v2/src/: logging.rs  main.rs  state.rs
dirty_files/source/containers/cli-v2/src/database/: ingestion.rs
dirty_files/source/containers/cli-v2/tests/: config_test.rs
dirty_files/source/libs/seaorm-db/rust-seaorm-client/: Cargo.toml
dirty_files/source/libs/seaorm-db/rust-seaorm-client/src/: account.rs  chemical_class.rs  effect.rs  stash.rs  substance_route_of_administration.rs  substance_route_of_administration_phase.rs  substance_synonym.rs  substance_tolerance.rs
dirty_files/source/libs/seaorm-db/rust-seaorm-client/src/migrations/: m20220101_000001_init.rs  mod.rs
pipelines/ds-psychonautwiki-api/: edgedb.toml  generated_edgeql.py  justfile  psychonautwiki-api.py  psychonautwiki.operation.graphql  pyproject.toml  schema.prisma
pipelines/ds-psychonautwiki-api/data/: psychonautwiki.json
pipelines/ds-psychonautwiki-api/queries/: create_substance.edgeql  substance_by_name.edgeql
source/containers/rust-server/: Cargo.toml
workflows/initialize-db-with-externals/: Makefile  graphql.config.yml  main.py  psychonautwiki.json  pw_types.py  pyproject.toml  types_effectindex.py
workflows/initialize-db-with-externals/prisma/: dev.db  schema.prisma
workflows/initialize-db-with-externals/src/initialize_db_with_externals/: __init__.py
workflows/skrap/: .gitignore  Makefile  flow.d2  mypy.ini  pyproject.toml  pytype.toml  ruff.toml
workflows/skrap/.cached_data/: psychonautwiki.json
workflows/skrap/graphql_client/: __init__.py  all_substances.py  client.py
workflows/skrap/prisma/: dev.db  schema.prisma
workflows/skrap/src/: __init__.py  create-database.py  workflow.py
workflows/skrap/src/codegen_types/: psychonautwiki.py
workflows/skrap/src/custom_types/: __init__.py
workflows/skrap/xd/: README.md  pyproject.toml
workflows/skrap/xd/src/xd/: __init__.py
(+1164 files in other folders)
