cargo-features = ["edition2024"]

[package]
name = "neuronek"
description = "🧬 Intelligent dosage tracker application for monitoring supplements, nootropics and psychoactive substances along with their long-term influence on one's mind and body."
authors = ["Jakub Olan <keinsell@protonmail.com>"]
version = "0.0.1-alpha.1"
edition = "2024"
repository = "https://github.com/keinsell/neuronek"
license-file = "LICENSE"

[[bin]]
name = "neuronek"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "82B4BD62-1152-44E6-B4FA-879648018D6F"
path-guid = "8EB7202C-B16A-4E75-900B-8924E701FA76"
license = false
eula = false

[dependencies]
assert_cmd = "2.0.16"
async-std = { version = "1", features = ["attributes", "async-global-executor"] }
atty = "0.2.14"
chrono = { version = "0.4.39", features = ["std", "serde", "iana-time-zone", "rkyv"] }
chrono-english = "0.1.7"
clap = { version = "4.5.23", features = ["derive", "wrap_help", "suggestions", "std", "usage", "error-context", "help", "unstable-styles", "unicode", "env", "unstable-v5"] }
clap-verbosity-flag = "3.0.1"
clap_complete = "4.5.40"
date_time_parser = "0.2.0"
delegate = "0.13.1"
derivative = "2.2.0"
directories = { version = "5.0.1" }
figlet-rs = "0.1.5"
float-pretty-print = "0.1.1"
futures = "0.3.31"
hashbrown = "0.15.2"
iso8601-duration = "0.2.0"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde", "kv", "max_level_trace", "release_max_level_off"] }
logforth = "0.19.0"
measurements = { version = "0.11.0", features = ["std", "serde", "from_str", "regex"] }
miette = { version = "7.4.0", features = ["fancy", "serde", "syntect-highlighter", "derive"] }
pubchem = "0.1.1"
rust-embed = "8.5.0"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "runtime-async-std-rustls", "serde_json", "with-chrono"] }
serde = { version = "1.0.216", features = ["derive", "std", "unstable"] }
tabled = { version = "0.17.0", features = ["std", "macros", "ansi", "derive", "tabled_derive"] }
typed-builder = "0.20.0"
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-async-std-rustls",
    "sqlx-sqlite"
] }
serde_json = "1.0.134"
chrono-humanize = "0.2.3"

[expand]
color = "always"
pager = true

[profile.dist]
inherits = "release"
lto = "fat"
