cargo-features = ["edition2024"]

[package]
name = "neuronek"
description = "🧬 Intelligent dosage tracker application for monitoring supplements, nootropics and psychoactive substances along with their long-term influence on one's mind and body."
authors = ["Jakub Olan <keinsell@protonmail.com>"]
version = "0.0.1-alpha.2"
edition = "2024"
repository = "https://github.com/keinsell/neuronek"
license-file = "LICENSE"

[[bin]]
name = "neuronek"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "82B4BD62-1152-44E6-B4FA-879648018D6F"
path-guid = "8EB7202C-B16A-4E75-900B-8924E701FA76"
license = false
eula = false

[dependencies]
assert_cmd = "2.0.16"
async-std = { version = "1", features = ["attributes", "async-global-executor"] }
atty = "0.2.14"
chrono = { version = "0.4.39", features = ["std", "serde", "iana-time-zone", "rkyv"] }
chrono-english = "0.1.7"
clap = { version = "4.5.23", features = ["derive", "wrap_help", "suggestions", "std", "cargo"] }
clap-verbosity-flag = "3.0.1"
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
date_time_parser = "0.2.0"
delegate = "0.13.1"
derivative = "2.2.0"
directories = { version = "5.0.1" }
float-pretty-print = "0.1.1"
futures = "0.3.31"
hashbrown = "0.15.2"
iso8601-duration = "0.2.0"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde", "kv", "max_level_trace", "release_max_level_off", "sval", "std"] }
measurements = { version = "0.11.0", features = ["std", "serde", "from_str", "regex"] }
miette = { version = "7.4.0", features = ["fancy", "serde", "syntect-highlighter", "derive"] }
pubchem = "0.1.1"
rust-embed = "8.2.0"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "runtime-async-std-rustls", "serde_json", "with-chrono"] }
serde = { version = "1.0.216", features = ["derive", "std", "unstable"] }
tabled = { version = "0.17.0", features = ["std", "macros", "ansi", "derive", "tabled_derive"] }
typed-builder = "0.20.0"
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-async-std-rustls",
    "sqlx-sqlite"
] }
serde_json = "1.0.134"
rstest = "0.24.0"
owo-colors = "4.1.0"
chrono-humanize = "0.2.3"
ratatui = { version = "0.26.0", features = ["all-widgets", "macros", "serde"] }
crossterm = "0.27.0"
async-trait = "0.1.85"
indicatif = "0.17.9"
tracing-subscriber = "0.3.19"
tracing-indicatif = "0.3.8"
tracing = { version = "0.1.25", features = ["log", "std", "attributes", "valuable"] }
itertools = "0.13.0"
rayon = "1.10.0"
predicates = "3.1.3"
serde_with = "3.12.0"
polars = { version = "0.45.1", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
duckdb = { version = "1.1.1", features = ["bundled", "serde_json"] }
textplots = "0.8.6"

[features]
# Enables the experimental TUI interface on `neuronek` binary.
experimental-tui = ["ratatui/all-widgets"]

[expand]
color = "always"
pager = true

[profile.dist]
inherits = "release"
lto = "fat"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/neuronek", dest = "/usr/bin/neuronek", mode = "755" },
    { source = "LICENSE-MIT", dest = "/usr/share/doc/neuronek/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/neuronek/README.md", mode = "644" },
    { source = "man/neuronek.1", dest = "/usr/share/man/man1/neuronek.1", mode = "644", doc = true },
    { source = "completions/neuronek.bash", dest = "/usr/share/bash-completion/completions/neuronek", mode = "644" },
    { source = "completions/neuronek.fish", dest = "/usr/share/fish/vendor_completions.d/neuronek.fish", mode = "644" },
    { source = "completions/_neuronek", dest = "/usr/share/zsh/vendor-completions/", mode = "644" },
]

[package.metadata.deb]
assets = [
    [
        "target/release/neuronek",
        "usr/bin/",
        "755",
    ],
    [
        "LICENSE",
        "/usr/share/doc/neuronek/LICENSE",
        "644",
    ],
    [
        "/README.md",
        "usr/share/doc/neuronek/README",
        "644",
    ],
    [
        "../man/neuronek.1",
        "/usr/share/man/man1/neuronek.1",
        "644",
    ],
    [
        "../completions/neuronek.bash",
        "/usr/share/bash-completion/completions/neuronek",
        "644",
    ],
    [
        "../completions/neuronek.fish",
        "/usr/share/fish/vendor_completions.d/neuronek.fish",
        "644",
    ],
    [
        "../completions/_neuronek",
        "/usr/share/zsh/vendor-completions/",
        "644",
    ],
]
