cargo-features = ["edition2024"]

[package]
name = "neuronek"
description = "🧬 Intelligent dosage tracker application for monitoring supplements, nootropics and psychoactive substances along with their long-term influence on one's mind and body."
authors = ["Jakub Olan <keinsell@protonmail.com>"]
version = "0.0.1-alpha.4"
edition = "2024"
repository = "https://github.com/keinsell/neuronek"
homepage = "https://github.com/keinsell/neuronek"
license-file = "LICENSE"

[[bin]]
name = "neuronek"
path = "src/main.rs"

[package.metadata.wix]
upgrade-guid = "82B4BD62-1152-44E6-B4FA-879648018D6F"
path-guid = "8EB7202C-B16A-4E75-900B-8924E701FA76"
license = false
eula = false

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
opt-level = 3
panic = "abort"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "async-global-executor", "async-process"] }
assert_cmd = "2.0.16"
atty = "0.2.14"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1.7"
clap = { version = "4.5.23", features = ["derive", "wrap_help", "suggestions", "std", "cargo"] }
clap-verbosity-flag = "3.0.1"
clap_complete = "4.5.40"
clap_mangen = "0.2.24"
date_time_parser = "0.2.0"
delegate = "0.13.1"
derivative = "2.2.0"
directories = { version = "5.0.1" }
float-pretty-print = "0.1.1"
futures = { version = "0.3.31", features = ["futures-executor", "thread-pool"] }
hashbrown = "0.15.2"
iso8601-duration = "0.2.0"
lazy_static = "1.5.0"
log = { version = "0.4.22", features = ["serde", "kv", "max_level_trace", "release_max_level_off", "sval", "std"] }
measurements = { version = "0.11.0", features = ["std", "serde", "from_str", "regex"] }
miette = { version = "7.4.0", features = ["fancy", "serde", "syntect-highlighter", "derive"] }
pubchem = "0.1.1"
rust-embed = "8.2.0"
sea-orm = { version = "1.1.2", features = ["sqlx-sqlite", "runtime-async-std-rustls", "serde_json", "with-chrono"] }
serde = { version = "1.0.216", features = ["derive", "std", "unstable"] }
tabled = { version = "0.17.0", features = ["std", "macros", "ansi", "derive", "tabled_derive"] }
typed-builder = "0.20.0"
sea-orm-migration = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-async-std-rustls"
] }
serde_json = "1.0.134"
owo-colors = "4.1.0"
chrono-humanize = "0.2.3"
async-trait = "0.1.85"
indicatif = "0.17.9"
tracing-subscriber = "0.3.18"
tracing-indicatif = "0.3.8"
tracing = "0.1.40"
predicates = "3.1.3"
serde_derive = "1.0.217"
thiserror = "2.0.11"
cached = {version = "0.54.0", features = ["disk_store", "async"]}
derive_more = {version = "2.0.1", features = ["full"]}
strum = "0.27.0"
human-panic = "2.0.2"
uuid = { version = "1.12.1", features = ["v4"] }
etcetera = "0.8.0"
tracing-appender = "0.2.3"
textplots = "0.8.6"
valuable = {version = "0.1.1", features = ["derive"]}
derive = "1.0.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
bon = "3.3.2"
termimad = "0.31.2"
humantime = "2.1.0"
plotters = { version = "0.3.5", default-features = false, features = ["ab_glyph"] }

[features]
default = []
tui = []

[profile.dist]
inherits = "release"
lto = "fat"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/neuronek", dest = "/usr/bin/neuronek", mode = "755" },
    { source = "LICENSE-MIT", dest = "/usr/share/doc/neuronek/LICENSE", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/neuronek/README.md", mode = "644" },
    { source = "man/neuronek.1", dest = "/usr/share/man/man1/neuronek.1", mode = "644", doc = true },
    { source = "completions/neuronek.bash", dest = "/usr/share/bash-completion/completions/neuronek", mode = "644" },
    { source = "completions/neuronek.fish", dest = "/usr/share/fish/vendor_completions.d/neuronek.fish", mode = "644" },
    { source = "completions/_neuronek", dest = "/usr/share/zsh/vendor-completions/", mode = "644" },
]

[package.metadata.deb]
assets = [
    [
        "target/release/neuronek",
        "usr/bin/",
        "755",
    ],
    [
        "LICENSE",
        "/usr/share/doc/neuronek/LICENSE",
        "644",
    ],
    [
        "/README.md",
        "usr/share/doc/neuronek/README",
        "644",
    ],
    [
        "../man/neuronek.1",
        "/usr/share/man/man1/neuronek.1",
        "644",
    ],
    [
        "../completions/neuronek.bash",
        "/usr/share/bash-completion/completions/neuronek",
        "644",
    ],
    [
        "../completions/neuronek.fish",
        "/usr/share/fish/vendor_completions.d/neuronek.fish",
        "644",
    ],
    [
        "../completions/_neuronek",
        "/usr/share/zsh/vendor-completions/",
        "644",
    ],
]

[dev-dependencies]
predicates = "3.1.3"
