[tool.poetry]
name = "neuronek"
version = "0.1.0"
description = ""
authors = ["Jakub Olan <keinsell@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
metaflow = "^2.11.10"
prisma-py = "^1.0"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
