cargo-features = ["edition2024"]

[package]
name = "neuronek-cli"
version = "0.0.1-dev.0"
authors = ["Jakub Olan <keinsell@protonmail.com>"]
autobins = true
edition = "2024"
readme = "README.md"
rust-version = "1.71.0"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
chrono-english = "0.1.7"
chrono-humanize = "0.2.3"
clap = { version = "4.5.4", features = ["derive", "cargo", "color", "error-context", "unicode"] }
futures = "0.3.28"
libsqlite3-sys = { version = "*", features = ["bundled"] }
log = "0.4.21"
db = { path = "./../../db/rust-seaorm-client", package = "neuronek-database-client" }
rust-embed = "8.4.0"
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-async-std-native-tls", "macros", "with-chrono", "with-json", "with-time", "with-time", "with-chrono", "with-json", "with-uuid", "with-rust_decimal", "with-bigdecimal"] }
sea-orm-migration = "^0.12.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["alloc", "preserve_order", "raw_value", "arbitrary_precision", "unbounded_depth"] }
structopt = { version = "0.3.26", features = ["suggestions", "color", "wrap_help"] }
tabled = "0.15.0"
terminal_size = "0.3.0"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
uom = { version = "0.36.0", features = ["autoconvert", "serde", "std"] }
xdg = "2.5.2"
lazy_static = "1.4.0"
async-std = "1.12.0"
fuzzy-matcher = "0.3.7"
emojic = { version = "0.4.1", features = ["lazy_static", "doc_cfg"] }
strsim = "0.11.1"
uuid = { version = "1.8.0", features = ["v4"] }
stderrlog = "0.6.0"
statrs = "0.16.1"
clap-markdown = "0.1.3"
human-panic = "2.0.0"
clap_complete = "4.4.10"
dateless = "0.3.1"

[features]
default = []
# Development features will disable production-like storage
# and enable features that are useful for development.
dev = []

[profile.dev]
opt-level = 0
debug = "full"

[profile.release]
opt-level = 0
lto = false
codegen-units = 1
panic = "abort"
strip = false
debug = false

[[bin]]
name = "neuronek"
path = "src/main.rs"
