[tool.poetry]
name = "psychonautwiki-dl"
version = "0.1.0"
description = ""
authors = ["Jakub Olan <keinsell@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
metaflow = "^2.11.10"
prisma = "^0.13.1"
datamodel-code-generator = "^0.25.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
