[tool.poetry]
name = "neuronek-skrap"
version = "0.1.0"
description = "Scrapper filter out incorrect data and build database of substance information."
authors = ["Jakub Olan <keinsell@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
metaflow = "^2.11.10"
prisma = "^0.13.1"
datamodel-code-generator = "^0.25.5"
mypy = "^1.9.0"
strawberry-graphql = "^0.233.3"
pydantic = "^2.7.2"
requests = "^2.32.3"
types-requests = "^2.32.0.20240523"
ruff = "^0.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

static-type-checking = true
