[project]
name = "xd"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "keinsell", email = "keinsell@protonmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = []
