[package]
name = "neuronek-cli-migrator"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migrator"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
tabled = "0.15.0"
tabled_derive = "0.7.0"

[dependencies.sea-orm-migration]
version = "0.12.0"
features = [
  "runtime-async-std-native-tls",
  "sqlx-sqlite",
  "with-time",
  "with-chrono",
  "with-json",
  "with-uuid",
  "with-rust_decimal",
  "with-bigdecimal",
]
